--- a/etsy-db/src/main/resources/application.properties
+++ b/etsy-db/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-input=classpath:EtsySoldOrders2018.csv
+orders.input=classpath:EtsySoldOrders2018.csv
+listings.input=classpath:EtsyListingsDownload.csv
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
-spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
