--- a/etsy-app/angular.json
+++ b/etsy-app/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/etsy-theme.scss"
             ],
             "scripts": []
           },
