--- a/etsy-db/src/main/resources/application.properties
+++ b/etsy-db/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-orders.input=classpath:EtsySoldOrders2018.csv
+orders.input.2012=classpath:EtsySoldOrders2012.csv
+orders.input.2013=classpath:EtsySoldOrders2013.csv
+orders.input.2014=classpath:EtsySoldOrders2014.csv
+orders.input.2015=classpath:EtsySoldOrders2015.csv
+orders.input.2016=classpath:EtsySoldOrders2016.csv
+orders.input.2017=classpath:EtsySoldOrders2017.csv
+orders.input.2018=classpath:EtsySoldOrders2018.csv
+orders.input.2019=classpath:EtsySoldOrders2019.csv
 listings.input=classpath:EtsyListingsDownload.csv
 
 spring.datasource.url=jdbc:h2:mem:testdb
