--- a/etsy-app/package.json
+++ b/etsy-app/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^7.0.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "har-validator": "^5.1.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
