--- a/etsy-db/src/main/resources/application.properties
+++ b/etsy-db/src/main/resources/application.properties
@@ -6,6 +6,7 @@ orders.input.2016=classpath:EtsySoldOrders2016.csv
 orders.input.2017=classpath:EtsySoldOrders2017.csv
 orders.input.2018=classpath:EtsySoldOrders2018.csv
 orders.input.2019=classpath:EtsySoldOrders2019.csv
+orders.input.2020=classpath:EtsySoldOrders2020.csv
 listings.input=classpath:EtsyListingsDownload.csv
 
 spring.datasource.url=jdbc:h2:mem:testdb
