--- a/etsy-db/src/main/resources/application.properties
+++ b/etsy-db/src/main/resources/application.properties
@@ -7,6 +7,7 @@ orders.input.2017=classpath:EtsySoldOrders2017.csv
 orders.input.2018=classpath:EtsySoldOrders2018.csv
 orders.input.2019=classpath:EtsySoldOrders2019.csv
 orders.input.2020=classpath:EtsySoldOrders2020.csv
+orders.input.2021=classpath:EtsySoldOrders2021.csv
 listings.input=classpath:EtsyListingsDownload.csv
 
 spring.datasource.url=jdbc:h2:mem:testdb
